<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="CustomerListModel"
            type="com.semaai.agent.model.existingcustomers.CustomerListModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_customerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:elevation="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/test_color"
                android:textSize="@dimen/_13sdp"
                android:paddingLeft="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_coma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=","
                android:textColor="@color/button_bg"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toRightOf="@id/tv_name"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="--"
                android:textColor="@color/test_color"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_coma"/>

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/phoneNumber"
                android:textColor="@color/test_color"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/line_bg1"
                app:layout_constraintBottom_toTopOf="@id/tv_district"
                app:layout_constraintTop_toBottomOf="@id/tv_number" />

            <TextView
                android:id="@+id/tv_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/district"
                android:textColor="@color/test_color1"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=","
                android:textColor="@color/test_color1"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintLeft_toRightOf="@id/tv_district"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_subDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/subDistrict"
                android:textColor="@color/test_color1"
                android:textSize="@dimen/_13sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintLeft_toRightOf="@id/tv_dot"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_village"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/village"
                android:textColor="@color/test_color1"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_district" />

            <ImageView
                android:id="@+id/iv_clockIn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:src="@drawable/ic_clock"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>