<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="registerCompleteViewModel"
            type="com.semaai.agent.viewmodel.newcustomer.RegisterCompleteViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cm_bottom"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/iv_done"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/ic_done"
            android:layout_marginBottom="@dimen/_150sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_done" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/text"
            android:textColor="@color/checkBg"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cv_continue" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_continue"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_40sdp"
            app:cardBackgroundColor="@color/button_bg"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cm_bottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_25sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/continue1"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="@dimen/_20sdp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



        <include
            android:id="@+id/cm_bottom"
            layout="@layout/bottom_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
