<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_15sdp"
    android:background="#00000000">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_msgText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/open_sans"
                android:text="@string/backPressText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:cardBackgroundColor="@color/button_bg"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/cv_no"
                app:layout_constraintTop_toBottomOf="@id/tv_msgText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_3sdp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/yes"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardBackgroundColor="@color/button_bg"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/cv_yes"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_msgText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_3sdp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>