<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSureWantToLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/_17sdp"
                android:text="@string/sure_want_to_logout"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_23sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/open_sans">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_Logout_Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_bg"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:backgroundTint="@color/button_bg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSureWantToLogout"
                app:layout_constraintRight_toLeftOf="@id/cv_Logout_No">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/open_sans"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:background="@color/button_bg">

                </TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_Logout_No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_bg"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/button_bg"
                app:layout_constraintLeft_toRightOf="@id/cv_Logout_Yes"
                app:layout_constraintTop_toBottomOf="@+id/tvSureWantToLogout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/open_sans"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_marginHorizontal="@dimen/_17sdp"
                    android:background="@color/button_bg">

                </TextView>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>